--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -6,5 +6,14 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "system.web.extensions": {
+    "scripting": {
+      "webServices": [
+        {
+          "@maxJsonLength": "9986753090"
+        }
+      ]
+    }
+  }
 }
