--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -5,5 +5,15 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "system.web.extensions": {
+    "scripting": {
+      "webServices": [
+        {
+          "@maxJsonLength": "86753090"
+        }
+      ]
+    }
   }
 }
